--- a/english.html
+++ b/english.html
@@ -55,6 +55,50 @@ ASPA is composed of 34 countries – 12 South American and 22 Arab -, with the c
   </div>
 </div>
 <!-- FIN QUE ES EL ASPA -->
+<!-- INICIO NOTICIAS ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#accordion2" href="#noticias-aspa">
+       Latest News 
+    </a>
+  </div>
+  <div style="height: 0px;" id="noticias-aspa" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+<div class="accordion" id="accordion-info-peru">
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" href="http://www.andina.com.pe/english/Inicio.aspx" target="_blank">
+	Peru News Agency 
+    </a>
+  </div>
+  <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->    
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN QUE ES EL ASPA -->
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" href="http://www.flickr.com/photos/65990097@N03/sets/" target="_blank">
+	Event Photos
+    </a>
+  </div>
+  <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->    
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN QUE ES EL ASPA -->
+</div>
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN NOTICIAS ASPA -->
 <!-- INICIO CALENDARIO DE ACTIVIDADES -->
 <div class="accordion-group">
   <div class="accordion-heading">
@@ -286,36 +330,36 @@ for global economic growth? How can we maximize the use of non-renewable energy 
 	</tr>
 	<tr>
 		<td>3:45 – 4:15 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">Receso de café y Networking</strong></td>
+		<td style="text-align: justify;"><strong class="titular">Networking Break</strong></td>
 	</tr>
 	<tr>
 		<td>4:15 – 5:30 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">MÁS ALLÁ DE LOS RECURSOS NATURALES: ¿Es la disponibilidad de recursos naturales una limitación en el desarrollo de la innovación? ¿Cómo se pueden usar los recursos naturales para crear valor agregado? ¿Cómo cuidar el escaso recurso del agua? ¿Cómo afrontar el problema del cambio climático? </strong><br />
-<strong>Orador principal:</strong> Sheikh Hamad Bin Khalifa Al-Thani, Emir del Estado de Qatar <br />
+		<td style="text-align: justify;"><strong class="titular">BEYOND NATURAL RESOURCES: Is the abundance of
+natural resources a limitation to the development of innovation? How can natural resources be used to create added value? Do natural resources help or hinder economic diversification? Is water vital for health, food and development, but are we really taking care of it? How can we make the best of this scarce resource? Is climate change an issue?</strong><br />
+<strong>Keynote address by:</strong> H.E. Sheikh Hamad Bin Khalifa Al-Thani, Emir of the State of Qatar <br />
 <strong>Moderator:</strong><br />
 <strong>Panel: </strong><br />
 		<ul>
-			<li>Issad Rebrab, CEO, CEVITAL (Argelia)</li>
-			<li>Carlos Bulgheroni, Presidente de Bridas Argentina (Argentina)</li>
+			<li>Issad Rebrab, CEO, CEVITAL (Algeria)</li>
+			<li>Carlos Bulgheroni, President of Bridas Argentina (Argentina)</li>
 		</ul>
 		</td>
 	</tr>
 	<tr>
 		<td>5:30 – 5:45 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">Sumario: ¿Qué oportunidades se encuentran en ambas regiones?
-		</strong><br />
-	Carlos Chiappori Samengo, Presidente de COMEXPERU</td>
+		<td style="text-align: justify;"><strong class="titular">Wrap – up: What opportunities lie ahead of the two
+regions?</strong><br />	Carlos Chiappori Samengo, President of COMEXPERU</td>
 	</tr>
 	<tr>
 		<td>5:45 – 6:00 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">Clausura del evento:</strong><br />
-	Luis Miguel Castilla Rubio, Ministro de Economía y Finanzas del Perú</td>
+		<td style="text-align: justify;"><strong class="titular">Closing Remarks:</strong><br />
+	Luis Miguel Castilla Rubio, Minister of Economy and Finance of the Republic of Peru </td>
 	</tr>
 	<tr>
 		<td>7:00 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">Eventos sociales y culturales:</strong><br />
-	Espectáculo en el Gran Teatro Nacional<br />				
-	Pisco de Honor en el Gran Teatro Nacional</td>
+		<td style="text-align: justify;"><strong class="titular">Social and cultural activities:</strong><br />
+	Performance at the Great National Theater<br />				
+	Pisco Sour Honour Cocktail at the Great National Theater</td>
 	</tr>
 </tbody></table></div></div></div>
 <div class="accordion-group">
@@ -330,50 +374,50 @@ for global economic growth? How can we maximize the use of non-renewable energy 
 <table class="table table-hover table-bordered table-striped">
     <tbody class="texto"> 
         <tr> 
-	    <th style="background-color:#ffffff;font-size:12px;">Horario</th><th style="background-color:#ffffff;font-size:12px;">Actividad</th>
+	    <th style="background-color:#ffffff;font-size:12px;">Schedule</th><th style="background-color:#ffffff;font-size:12px;">Activity</th>
         </tr>
         <tr>
             <td>9:00 – 9:45 a.m.</td>
-            <td><strong class="titular">Palabras de bienvenida</strong><br />
-		Juan Jiménez Mayor, Presidente del Consejo de Ministros del Perú *
+            <td><strong class="titular">Welcome remarks</strong><br />
+		Juan Jiménez Mayor, Prime Minister of the Republic of Peru *
             </td>
         </tr>
 	<tr>
 	    <td>8:45 – 9:15 a.m.</td>
-	    <td style="text-align: justify;"><strong class="titular">CLIMA DE INVERSIÓN: ¿En qué se sustenta el crecimiento económico del Perú?, ¿Cuáles son las perspectivas?, ¿Mediante qué mecanismos incentiva el Estado peruano la inversión?</strong><br />
-Luis Miguel Castilla Rubio, Ministro de Economía y Finanzas del Perú 
+	    <td style="text-align: justify;"><strong class="titular">INVESTMENT CLIMATE: What is Peru’s economic growth based on? What are the perspectives? What are the mechanisms used by the Peruvian State to promote investment?</strong><br />
+Luis Miguel Castilla Rubio, Minister of Economy and Finance of the Republic of Peru
             </td>
 	</tr>
 	<tr>
 	    <td>9:15 – 9:45 a.m.</td>
-	    <td style="text-align: justify;"><strong class="titular">SOSTENIBILIDAD ENERGÉTICA: ¿De qué fuentes energéticas dispone el Perú?, ¿Cómo se vienen desarrollando?, ¿Puede el Perú convertirse en un exportador neto de energía?</strong><br />
-Jorge Merino Tafur, Ministro de Energía y Minas del Perú
+	    <td style="text-align: justify;"><strong class="titular">SUSTAINABILITY IN THE ENERGY SECTOR: What are Peru’s energy sources? How are these sources developing? Can Peru become an energy exporter?</strong><br />
+Jorge Merino Tafur, Minister of Energy and Mining of the Republic of Peru
 	    </td>
 	</tr>
 	<tr>
 		<td>9:45 – 10:15 a.m.</td>
-		<td style="text-align: justify;"><strong class="titular">INFRAESTRUCTURA PARA LA INTEGRACIÓN: ¿Cómo se viene articulando la integración física del territorio peruano?, ¿Cómo participa la inversión privada en el desarrollo de infraestructura?, ¿Cuál es la estrategia a seguir para afianzar al Perú como hub del Pacífico Sudamericano?</strong><br />
-	Carlos Paredes Rodríguez, Ministro de Transportes y Comunicaciones del Perú *</td>
+		<td style="text-align: justify;"><strong class="titular">INFRASTRUCTURE FOR INTEGRATION: How is Peru advancing the physical integration of its territory? How does private investment participate in the development of infrastructure? What is the strategy to consolidate Peru as a hub in the South American Pacific?</strong><br />
+	Carlos Paredes Rodríguez, Minister of Transport and Communication of the Republic of Peru *</td>
 	</tr>
 	<tr>
 		<td>10:15 – 10:45 a.m.</td>
-		<td style="text-align: justify;"><strong class="titular">DESARROLLO URBANO: ¿Cuál es el déficit de infraestructura urbana?, ¿Cuál es la perspectiva de crecimiento urbano para los siguientes años?, ¿Qué programas impulsa el Estado y cuál es la participación del sector privado?</strong><br />
-	René Cornejo Díaz, Ministro de Vivienda, Construcción y Saneamiento 
+		<td style="text-align: justify;"><strong class="titular">URBAN DEVELOPMENT: What is the deficit in urban infrastructure? What is the perspective of urban growth for the next years? What kind of programs promotes the State and what is the private sector participation?</strong><br />
+	René Cornejo Díaz, Minister of Housing, Construction and Sanitation of the Republic of Peru
 		</td>
 	</tr>
 	<tr>
 		<td>10:45 – 11:15 a.m.</td>
-		<td style="text-align: justify;"><strong class="titular">AGRICULTURA DE ALTO VALOR: ¿En qué aspectos se basa la competitividad del Perú como productor de alimentos?, ¿Qué proyectos refuerzan la competitividad del país en la actividad agrícola?, ¿Cuáles son las oportunidades de inversión?</strong><br />
-	Milton Von Hesse La Serna, Ministro de Agricultura del Perú</td>
+		<td style="text-align: justify;"><strong class="titular">HIGH – VALUED AGRICULTURE: In what aspects is Peru’s competitiveness based on as food producer? What projects strengthen the country’s competitiveness in the agriculture sector? What are the investment opportunities?</strong><br />
+	Milton Von Hesse La Serna, Minister of Agriculture of the Republic of Peru</td>
 	</tr>
 	<tr>
 		<td>11:15 – 11:30 a.m.</td>
-		<td style="text-align: justify;"><strong class="titular">Palabras de clausura </strong><br />
-	Javier Illescas, Director Ejecutivo de la Agencia de Promoción de la Inversión Privada - Proinversión</td>
+		<td style="text-align: justify;"><strong class="titular">Closing remarks</strong><br />
+	Javier Illescas, Executive Director of the Private Investment Promotion Agency of Peru - Proinversión</td>
 	</tr>
 	<tr>
 		<td>11:30 – 1:00 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">Networking</strong></td>
+		<td style="text-align: justify;"><strong class="titular">Business Networking</strong></td>
 	</tr>
 	<tr>
 		<td>3:30 – 6:00 p.m.</td>
@@ -458,23 +502,23 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
 <tbody> 
 <tr> 
 	<th style="background-color:#ffffff;font-size:12px;">Local</th>
-	<th style="background-color:#ffffff;font-size:12px;">Mapa</th>
+	<th style="background-color:#ffffff;font-size:12px;">Maps</th>
 </tr>
 
 <tr >
-<td><a href="http://www.mcultura.gob.pe/" target="_blank">Ministerio de Cultura</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/Apq8a"><i class="icon-map-marker icon-white"></i></a></td>
+<td><a href="http://www.mcultura.gob.pe/" target="_blank">Ministry of Culture</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/Apq8a"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
-<td><a href="http://www.mcultura.gob.pe/gran-teatro-nacional-informacion-general" target="_blank">Gran Teatro Nacional</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/sGbRW"><i class="icon-map-marker icon-white"></i></a></td>
+<td><a href="http://www.mcultura.gob.pe/gran-teatro-nacional-informacion-general" target="_blank">Grand National Theater</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/sGbRW"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
-<td><a href="palacio.html">Palacio de Gobierno</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/4AA9u"><i class="icon-map-marker icon-white"></i></a></td>
+<td><a href="palacio.html">Government Palace</a></td><td><a class="btn btn-info" target="_blank" href="http://goo.gl/maps/4AA9u"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
 <td><a href="http://www.swissotel.com/hotels/lima/" target="_blank">Swissotel</a></td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws" target="_blank"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
-<td><a href="http://www.bnp.gob.pe/portalbnp/" target="_blank">Biblioteca Nacional</a></td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws" target="_blank"><i class="icon-map-marker icon-white"></i></a></td>
+<td><a href="http://www.bnp.gob.pe/portalbnp/" target="_blank">National Library</a></td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws" target="_blank"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 </tbody></table>
 <!-- CONTENIDO -->
@@ -495,7 +539,7 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
 <!-- INICIO QUE ES EL ASPA -->
 <div class="accordion-group">
   <div class="accordion-heading">
-    <a class="accordion-toggle" href="media/centro-de-prensa.pdf">
+    <a class="accordion-toggle" href="media/press-center.pdf">
       Press Center
     </a>
   </div>
@@ -512,21 +556,6 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
   </div>
 </div>
 <!-- FIN  PRENSA -->
-<!-- INICIO NOTICIAS ASPA -->
-<div class="accordion-group">
-  <div class="accordion-heading">
-    <a class="accordion-toggle" href="http://www.andina.com.pe/espanol/aspa2012/index.aspx" target="_blank">
-      Latest News
-    </a>
-  </div>
-  <div style="height: 0px;" id="info-peru3" class="accordion-body collapse">
-    <div class="accordion-inner"><!-- CONTENIDO -->
-     
-    <!-- CONTENIDO -->
-    </div>
-  </div>
-</div>
-<!-- FIN NOTICIAS ASPA -->
 <!-- INICIO CONTACTO -->
 <div class="accordion-group">
   <div class="accordion-heading">
@@ -538,35 +567,35 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
     <div class="accordion-inner"><!-- CONTENIDO -->
 
 <p>
-<a href="www.rree.gob.pe" target="_blank"> Cancillería</a><br />
-Ministro Jorge Salas<br />
-Dir. de la Oficina General de Comunicación<br />
+<a href="www.rree.gob.pe" target="_blank">Ministry of Foreign Affairs</a><br />
+Jorge Salas<br />
+Gen. Office of Communications<br />
 <a href="mailto:jsalasr@rree.gob.pe">jsalasr@rree.gob.pe</a>
 <br />  
 </p><p>
 Hugo Contreras<br />
-Sub Dir Prensa y Difusión Ofic Gral Comunicaciones<br />
+Press and Publications at Gen. Office of Communications<br />
 <a href="mailto:hcontreras@rree.gob.pe"> hcontreras@rree.gob.pe</a>
 </p>
 <p>
 Cielo Cano Gallardo<br />
-Dirección de Promoción de Inversiones<br />
+Investment Promotion Office<br />
 <a href="mailto:ccano@rree.gob.pe">ccano@rree.gob.pe</a>
 <br /> 
 </p><p>
 <a href="www.comexperu.org.pe" target="_blank">COMEX</a><br />
 Ricardo Paredes Castro<br />
-Gte. de Estudios Económicos y Consultoría Empresarial<br />
+Economic Research and Business Consulting<br />
 <a href="mailto:rparedes@comexperu.org.pe">rparedes@comexperu.org.pe</a>
 <br /> 
 </p><p>
 <a href="www.proinversion.gob.pe" target="_blank">ProInversión</a><br />
 Milagros Rasmussen Albitres<br />
-Comunicaciones e Imagen Institucional<br />
+Communications and Institutional Image<br />
 <a href="mailto:mrasmussen@proinversion.gob.pe">mrasmussen@proinversion.gob.pe</a>
 </p><p>
 Patricia Escudero Ascencio<br />
-Prensa y Comunicaciones<br />
+Press and Communications<br />
 <a href="mailto:pescudero@presidencia.gob.pe">pescudero@presidencia.gob.pe</a>
 <br /> </p>
 <!-- CONTENIDO -->
