--- a/spanish.html
+++ b/spanish.html
@@ -55,6 +55,50 @@ El ASPA está conformado conformado por los 22 países miembros de la Liga de Es
   </div>
 </div>
 <!-- FIN QUE ES EL ASPA -->
+<!-- INICIO NOTICIAS ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#accordion2" href="#noticias-aspa">
+       Noticias Aspa 
+    </a>
+  </div>
+  <div style="height: 0px;" id="noticias-aspa" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+<div class="accordion" id="accordion-info-peru">
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" href="http://www.andina.com.pe/espanol/aspa2012/index.aspx" target="_blank">
+	Agencia Peruana de Noticias 
+    </a>
+  </div>
+  <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->    
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN QUE ES EL ASPA -->
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" href="http://www.flickr.com/photos/65990097@N03/sets/" target="_blank">
+      Fotos del evento
+    </a>
+  </div>
+  <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->    
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN QUE ES EL ASPA -->
+</div>
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN NOTICIAS ASPA -->
 <!-- INICIO CALENDARIO DE ACTIVIDADES -->
 <div class="accordion-group">
   <div class="accordion-heading">
@@ -510,21 +554,6 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
   </div>
 </div>
 <!-- FIN  PRENSA -->
-<!-- INICIO NOTICIAS ASPA -->
-<div class="accordion-group">
-  <div class="accordion-heading">
-    <a class="accordion-toggle" href="http://www.andina.com.pe/espanol/aspa2012/index.aspx" target="_blank">
-      Noticias ASPA
-    </a>
-  </div>
-  <div style="height: 0px;" id="info-peru3" class="accordion-body collapse">
-    <div class="accordion-inner"><!-- CONTENIDO -->
-     
-    <!-- CONTENIDO -->
-    </div>
-  </div>
-</div>
-<!-- FIN NOTICIAS ASPA -->
 <!-- INICIO CONTACTO -->
 <div class="accordion-group">
   <div class="accordion-heading">
