--- a/prueba.html
+++ b/prueba.html
@@ -8,20 +8,39 @@
   <script src="static/js/jquery.js" type="text/javascript"></script>
   <script src="static/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="static/js/prueba.js" type="text/javascript"></script>
+  <!--<script src="http://50.116.43.119:8070/andina/noticias/json/" type="text/javascript"></script>-->
   <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
   <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 <style>
-#result{
-width:500px;height:100px;background-color:red;display:block;
+#noticias{
+/*width:500px;height:100px;background-color:red;display:block;*/
 }
 </style>
+<script>
+$(document).ready(function() {
+jsonp("http://50.116.43.119:8070/andina/noticias/json/");
+});
+</script>
 <title>III Cumbre ASPA</title>
 </head>
 <body>
 <div class="row-fluid">
-	<div id="noticias">
-		
-	</div>
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion" id="accordion2">
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#noticias-aspa">
+	Agencia Peruana de Noticias 
+    </a>
+  </div>
+  <div style="height: 0px;" id="noticias-aspa" class="accordion-body collapse">
+    <div class="accordion-inner" id="andina"><!-- CONTENIDO -->  
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN QUE ES EL ASPA -->
+</div>
 </div>
 </body>
 </html>
