--- a/spanish2.html
+++ b/spanish2.html
@@ -84,14 +84,13 @@ El ASPA está conformado conformado por los 22 países miembros de la Liga de Es
 
 <div class="accordion-group">
   <div class="accordion-heading">
-    <a class="accordion-toggle" data-toggle="collapse" data-parent="#noticias-aspa3" href="#noticias-aspa">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#noticias-aspa3" href="#noticias-aspa" onclick="jsonp('http://50.116.43.119:8070/andina/noticias/json/');">
 	Ultimas Noticias
     </a>
   </div>
   <div style="height: 0px;" id="noticias-aspa" class="accordion-body collapse">
     <div class="accordion-inner" id="andina"><!-- CONTENIDO -->  
-	<a class="btn btn-inverse enlace" onclick="jsonp('http://50.116.43.119:8070/andina/noticias/json/');" target="_blank">Ver ultimas noticias de Andina</a><br />
-<strong class="titular">Esta operación puede tomar algunos segundos.</strong> 
+	
     <!-- CONTENIDO -->
     </div>
   </div>
